tests/ui/array-slice-vec/array_const_index-0.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/array_const_index-0.rs:2:16
   |
LL | const B: i32 = (&A)[1];
   |                ^^^^^^^ index out of bounds: the length is 0 but the index is 1

note: erroneous constant encountered
  --> $DIR/array_const_index-0.rs:7:13
   |
LL |     let _ = B;
   |             ^

note: erroneous constant encountered
  --> $DIR/array_const_index-0.rs:7:13
   |
LL |     let _ = B;
   |             ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
